fixed label not showing issue of react-select options

--- a/src/pages/Dashboard/AddDoctor/AddDoctor.css
+++ b/src/pages/Dashboard/AddDoctor/AddDoctor.css
@@ -13,6 +13,7 @@
 
 #add-doctor .css-1jqq78o-placeholder {
   margin: 0;
+  color: #9ca3af;
 }
 
 #add-doctor .css-19bb58m {
